@@ -11,6 +11,7 @@
 		<dependency type="library" id="servlet" maven-scope="provided" />
 		<dependency type="library" id="fileupload" primary="true" />
 		<dependency type="module" id="core" />
+		<dependency type="module" id="servlet" includes="gae,jee" />
 	</dependencies>
 	<wikiUri>64-restlet</wikiUri>
 </module>
