@@ -7,8 +7,9 @@ Changes log
     - Bugs fixed
       - Reintroduced registration by default of the internal HTTP server 
         connectors in JEE edition.
-       - FormDataSet not properly serializing text/plain files. Issue #1006.
-         Reported by johnjaylward.
+      - FormDataSet not properly serializing text/plain files. Issue #1006.
+        Reported by johnjaylward.
+      - Fixed fileupload extension for GAE and JEE editions.
     - Enhancements
       - 
 
